moved releases from dropbox back to wuala

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader">Links</h1><!-- Sidebar header -->
-			<a href="https://www.dropbox.com/sh/q6scl8hpcmmuoim/wzm84KwUkZ">Releases</a><br/>
+			<a href="https://www.wuala.com/tfgordon/Public/Carneades/Releases/">Releases</a><br/>
 
 <a href="https://github.com/carneades/carneades">GIT Repository</a><br/>
 
@@ -63,7 +63,7 @@ Figure. Screen Shot of the Carneades Web App</center>
 
 <h2>Introducing the Carneades Web App</h2>
 
-<p>The latest version of Carneades is a Web application with a three-tiered architecture consisting of a relational database backend layer, an application logic layer and a graphical user interface layer. (The previous version of Carneades, a desktop application called the <a href="https://www.dropbox.com/s/a21y58apizju9lf/carneades-editor-1.0.2.jar">Carneades Editor</a>, is still available.</p>
+<p>The latest version of Carneades is a Web application with a three-tiered architecture consisting of a relational database backend layer, an application logic layer and a graphical user interface layer. (The previous version of Carneades, a desktop application called the <a href="https://www.wuala.com/tfgordon/Public/Carneades/Releases/carneades-editor-1.0.2.jar">Carneades Editor</a>, is still available.</p>
 
 <p>New Features:</p>
 
@@ -99,7 +99,7 @@ Figure. Screen Shot of the Carneades Web App</center>
 <p>To download, install and run the Carneades Web Application<p>
 
 <ol>
-<li>Download the latest version of the <code>carneades-webapp.x.x.zip</code> file from the <a href="https://www.dropbox.com/sh/q6scl8hpcmmuoim/wzm84KwUkZ">releases</a> folder.</li>
+<li>Download the latest version of the <code>carneades-webapp.x.x.zip</code> file from the <a href="https://www.wuala.com/tfgordon/Public/Carneades/Releases">releases</a> folder.</li>
 <li>Unzip the <code>carneades-webapp.x.x.zip</code> file.</li>
 <li>Change to the <code>carneades-webapp</code> directory.</li>
 <li>Double click on the <code>carneades-webapp.jar</code> file.</li>
